--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html 
- <embed src="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" width="500" height="375" 
+<iframe src="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
  type="application/pdf">
 </html>
