--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+<a target="_blank" href=""https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" title="">CV - James Doran
