--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<a target="_blank" href=""https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" title="">CV - James Doran
+<!doctype html>
+<html>
+      <object data="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" height="100%" width="100%"></object>
+</html>
