--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <html>
-      <object data="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" height="100%" width="100%"></object>
+      <object width="400" height="500" type="application/pdf" data="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf">
+            <p>PDF cannot be displayed, please contact James Doran (jadoran1997@gmail.com) for a copy.</p>
+      </object>
 </html>
