--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
-      <object width="400" height="500" type="application/pdf" data="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf">
-            <p>PDF cannot be displayed, please contact James Doran (jadoran1997@gmail.com) for a copy.</p>
-      </object>
+      <head>
+            <meta charset="UTF-8">
+            <title> CV - James Doran </title>
+      </head>
+      <body>
+            <embed src="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" height="400" width="700"/>
+      </body>
 </html>
