--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
-<html>
-      <head>
-            <meta charset="UTF-8">
-            <title> CV - James Doran </title>
-      </head>
-      <body>
-            <embed src="https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" height="400" width="700"/>
-      </body>
+<head>
+    <title>CV - James Doran</title>
+</head>
+  
+<body>
+    <center>
+        <h1 style="color: green">James Doran</h1>
+        <h3>CV</h3>
+        <object data=
+"https://github.com/james-doran97/CV/raw/main/James_Doran_CV.pdf" 
+                width="800" 
+                height="500"> 
+        </object>
+    </center>
+</body>
+  
 </html>
